--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
-[submodule "RedDbg/Include/Deps/Arch"]
-	path = RedDbg/Include/Deps/Arch
-	url = https://github.com/Nitr0-G/Arch
+[submodule "RedDbg/Include/Deps/DriverLoader"]
+	path = RedDbg/Include/Deps/DriverLoader
+	url = https://github.com/Nitr0-G/DriverLoader
+[submodule "RedDbg/Source/Deps/zydis"]
+	path = RedDbg/Source/Deps/zydis
+	url = https://github.com/zyantific/zydis
+[submodule "RedDbg/Source/Deps/--recursive"]
+	path = RedDbg/Source/Deps/--recursive
+	url = https://github.com/zyantific/zydis
