--- a/RedDbg/RedDbgApp.vcxproj
+++ b/RedDbg/RedDbgApp.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -104,12 +104,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)/Include/Deps;$(SolutionDir)/Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)/Include/GUI/UI/ImGui/FileDialog;$(SolutionDir)/Include/Deps;$(SolutionDir)/Include;$(SolutionDir)/Include/GUI/UI/ImGui/Opengl3&amp;WinApi;$(SolutionDir)/Include/GUI/UI/ImGui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)/Source/Deps/libs</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -120,23 +123,83 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)/Include/Deps;$(SolutionDir)/Include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <LanguageStandard>stdcpp20</LanguageStandard>
+      <AdditionalIncludeDirectories>$(SolutionDir)/Include/GUI/UI/ImGui/FileDialog;$(SolutionDir)/Include/Deps;$(SolutionDir)/Include;$(SolutionDir)/Include/GUI/UI/ImGui/Opengl3&amp;WinApi;$(SolutionDir)/Include/GUI/UI/ImGui;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <OpenMPSupport>true</OpenMPSupport>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalLibraryDirectories>$(SolutionDir)/Source/Deps/libs</AdditionalLibraryDirectories>
+      <AdditionalDependencies>opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source\Debugger\Application\Main.cpp" />
-    <ClCompile Include="Source\Debugger\Application\PEReader.cpp" />
+    <ClCompile Include="Source\GUI\CustomTitleBar.cpp" />
+    <ClCompile Include="Source\GUI\General.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\CallStackMenuBegin\CallStackTab.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\CPUMenuBegin\CPUTab.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\MemoryMapMenuBegin\MemoryMapTab.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\MenuGeneral.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Nodes\COFFFileHeaderNode.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Nodes\DataDirectoriesNode.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Nodes\DoSHeaderNode.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Nodes\FileInfoNode.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Nodes\ImportDirectoryNode.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Nodes\NtHeaderNode.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Nodes\OptionalHeaderNode.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Nodes\RichHeaderNode.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Nodes\Section\Entropy.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Nodes\Section\SectionHeaderNode.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\Parser\PEReader.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\PeMenuBegin\PeTab.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\SEHMenuBegin\SehTab.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\StackMapMenuBegin\StackMapTab.cpp" />
+    <ClCompile Include="Source\GUI\MenuOfMainTabs\ThreadsMenuBegin\ThreadsTab.cpp" />
+    <ClCompile Include="Source\GUI\UI\ImGui\FileDialog\ImGuiFileDialog.cpp" />
+    <ClCompile Include="Source\GUI\UI\ImGui\imgui.cpp" />
+    <ClCompile Include="Source\GUI\UI\ImGui\imgui_demo.cpp" />
+    <ClCompile Include="Source\GUI\UI\ImGui\imgui_draw.cpp" />
+    <ClCompile Include="Source\GUI\UI\ImGui\imgui_tables.cpp" />
+    <ClCompile Include="Source\GUI\UI\ImGui\imgui_widgets.cpp" />
+    <ClCompile Include="Source\GUI\UI\ImGui\Opengl3&amp;WinApi\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="Source\GUI\UI\ImGui\Opengl3&amp;WinApi\imgui_impl_win32.cpp" />
+    <ClCompile Include="Source\GUI\Window.cpp" />
+    <ClCompile Include="Source\GUI\WindowGeneralSizes.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Include\Debugger\Application\Pe\PEInformation.hpp" />
     <ClInclude Include="Include\Debugger\Application\Pe\PEReader.hpp" />
+    <ClInclude Include="Include\GUI\ClickedCodesOfTreeNodes.hpp" />
+    <ClInclude Include="Include\GUI\CustomTitleBar.hpp" />
+    <ClInclude Include="Include\GUI\DimensionsesOfWindowses.hpp" />
+    <ClInclude Include="Include\GUI\General.hpp" />
+    <ClInclude Include="Include\GUI\GlobalClass.hpp" />
+    <ClInclude Include="Include\GUI\MenuOfMainTabs\CallStackMenuBegin\CallStackTab.hpp" />
+    <ClInclude Include="Include\GUI\MenuOfMainTabs\CPUMenuBegin\CPUTab.hpp" />
+    <ClInclude Include="Include\GUI\MenuOfMainTabs\MemoryMapMenuBegin\MemoryMapTab.hpp" />
+    <ClInclude Include="Include\GUI\MenuOfMainTabs\MenuGeneral.hpp" />
+    <ClInclude Include="Include\GUI\MenuOfMainTabs\PeMenuBegin\PeTab.hpp" />
+    <ClInclude Include="Include\GUI\MenuOfMainTabs\SEHMenuBegin\SehTab.hpp" />
+    <ClInclude Include="Include\GUI\MenuOfMainTabs\StackMapMenuBegin\StackMapTab.hpp" />
+    <ClInclude Include="Include\GUI\MenuOfMainTabs\ThreadsMenuBegin\ThreadsTab.hpp" />
+    <ClInclude Include="Include\GUI\Names.hpp" />
+    <ClInclude Include="Include\GUI\UI\ImGui\FileDialog\ImGuiFileDialog.h" />
+    <ClInclude Include="Include\GUI\UI\ImGui\FileDialog\ImGuiFileDialogConfig.h" />
+    <ClInclude Include="Include\GUI\UI\ImGui\imconfig.h" />
+    <ClInclude Include="Include\GUI\UI\ImGui\imgui.h" />
+    <ClInclude Include="Include\GUI\UI\ImGui\imgui_internal.h" />
+    <ClInclude Include="Include\GUI\UI\ImGui\imstb_rectpack.h" />
+    <ClInclude Include="Include\GUI\UI\ImGui\imstb_textedit.h" />
+    <ClInclude Include="Include\GUI\UI\ImGui\imstb_truetype.h" />
+    <ClInclude Include="Include\GUI\UI\ImGui\Opengl3&amp;WinApi\imgui_impl_opengl3.h" />
+    <ClInclude Include="Include\GUI\UI\ImGui\Opengl3&amp;WinApi\imgui_impl_opengl3_loader.h" />
+    <ClInclude Include="Include\GUI\UI\ImGui\Opengl3&amp;WinApi\imgui_impl_win32.h" />
+    <ClInclude Include="Include\GUI\Window.hpp" />
+    <ClInclude Include="Include\GUI\WindowCodes.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
