--- a/RedDbg/imgui.ini
+++ b/RedDbg/imgui.ini
@@ -14,6 +14,18 @@ Size=1000,424
 Pos=481,335
 Size=367,91
 
+[Window][asddds]
+Pos=590,188
+Size=420,311
+
+[Window][Window]
+Pos=155,111
+Size=777,431
+
+[Window][Options]
+Pos=461,187
+Size=551,345
+
 [Table][0x928A56C5,4]
 RefScale=13
 Column 0  Width=49
@@ -1195,6 +1207,10 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0xF4A85AE2,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x54AEC65A,4]
 RefScale=13
 Column 0  Sort=0v
 
