--- a/RedDbg/imgui.ini
+++ b/RedDbg/imgui.ini
@@ -23,8 +23,8 @@ Pos=155,111
 Size=777,431
 
 [Window][Options]
-Pos=461,187
-Size=551,345
+Pos=438,115
+Size=697,557
 
 [Table][0x928A56C5,4]
 RefScale=13
@@ -1211,6 +1211,14 @@ RefScale=13
 Column 0  Sort=0v
 
 [Table][0x54AEC65A,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x77CE3F44,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x3422C872,4]
 RefScale=13
 Column 0  Sort=0v
 
